# pharma-supply-chain-tracking

./: .gitignore  LICENSE  README.md  drugBatch.json  hardhat.config.js  package-lock.json  package.json
backend/: batches.js  index.js  package-lock.json  package.json  sensorSimulator.js  server.js
backend/data/: drug_batches.csv  drug_batches.json
contracts/: DrugBatch.sol  hardhat.config.js  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: DrugBatch.sol
contracts/scripts/: deploy.js
frontend/: package-lock.json  package.json
frontend/pharma-supply-chain-frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  apolloClient.js  index.js  queries.js
pharma-supply-chain-subgraph/supply-chain-tracker/: networks.json  schema.graphql  subgraph.yaml
sps/: Cargo.toml  package-lock.json  package.json  schema.graphql
sps/abis/: drugBatch.json
sps/mappings/: mappins.ts
sps/src/: lib.rs  main.rs
sps2/: schema.graphql  subgraph.yaml
sps2/pharma-supply-chain-tracker/: schema.graphql  subgraph.yaml
sps2/src/: contract.ts
subgraph/: networks.json  package-lock.json  package.json  schema.graphql
subgraph/abis/: Contract.json
subgraph/src/: Contract.ts
subgraph/subgraph/: schema.graphql  subgraph.yaml
subgraph/substreams/: Cargo.toml  build.rs  substreams.yaml
subgraph/supply-chain-tracker/: package.json  schema.graphql  subgraph.yaml
subgraph/tests/: contract-utils.ts  contract.test.ts
substreams-SPS/: schema.graphql  substreams.yaml
(+31 files in other folders)
